--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
 }
 
 header {
-  background: #4f46e5;
-  color: white;
+  background: #f9f9f9;
+  color: w#4f46e5;
   text-align: center;
   padding: 2rem 1rem;
   border-radius: 0 0 20px 20px;
